.workspace-data/cache/repo-33e59f1f5d53b03b/crates/next-custom-transforms/tests/errors/server-actions/server-graph/15/output.js
export default function Default() {}
export function foo() {}
export const bar = ()=>{};
